# hexmap

./: .gitignore  LICENSE  hexmap.cabal  run.sh  stack.yaml
app/: Main.hs
src/: Hexmap.hs
src/Hexmap/: Layout.hs  Orientation.hs  Util.hs
src/Hexmap/Coordinates/: Axial.hs  Class.hs  Conversion.hs  Offset.hs  Pixel.hs
test/Hexmap/Coordinates/: ConversionSpec.hs
