name:                hexmap
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            http://github.com/reinh/hexmap#readme
license:             BSD3
license-file:        LICENSE
author:              Rein Henrichs
maintainer:          rein.henrichs@gmail.com
copyright:           Copyright Rein Henrichs 2015
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hexmap
                     , Hexmap.Coordinates.Axial
                     , Hexmap.Coordinates.Class
                     , Hexmap.Coordinates.Offset
                     , Hexmap.Coordinates.Pixel
                     , Hexmap.Layout
                     , Hexmap.Orientation
                     , Hexmap.Util
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , linear == 1.20.2
  default-language:    Haskell2010

executable hexmap-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       hexmap
                     , base
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , lucid
                     , lucid-svg
  default-language:    Haskell2010

test-suite hexmap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hexmap
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reinh/hexmap
